# Bruce_raw

./: CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  benchmark.py
bench/: bench_mix_v4.cpp
demo/security_platform_v1/axes/: axes.json
demo/security_platform_v1/fields/: field_security.json  manifest.json
demo/security_platform_v1/meta/: viewer.json
demo/security_platform_v1/projections/: manifest.json  projections.json
demo/security_platform_v1/rules/: manifest.json  rules.json
demo/security_platform_v1/states/: manifest.json  states.json
include/bruce/: types.hpp
include/bruce/io/: minijson.hpp  project.hpp
include/bruce/observer/: cli_usage.hpp
io/schema/: axes.schema.json  dump.schema.json  dump_v4.schema.json  field.schema.json  fields.schema.json  patches.schema.json  project_v4.schema.json  rules.schema.json  states.schema.json  viewer.schema.json
project/axes/: axes.json
project/changes/: patches.json
project/cores/: cores.json
project/fields/: field_1.json  manifest.json
project/lexicon/: lexicon.json
project/logs/: backup.json  life_dump.json
project/meta/: README.md  schema_version.txt  viewer.json
project/projections/: manifest.json  projections.json
project/router/: actions.json  policy.json
project/rules/: manifest.json  rules.json
project/states/: manifest.json  states.json  states_backup.json.bak
src/: cli_main.cpp  core_axes.cpp  core_ops.cpp  core_rules.cpp  core_state.cpp  io_export_json.cpp  io_fields.cpp  io_project_load.cpp  minijson.cpp  util_sha256.cpp
tests/: test_core.cpp  test_v6.cpp
(+9 files in other folders)
